# nft-storage.rs

./: Cargo.toml  README.md
examples/check_nft/: Cargo.toml
examples/check_nft/src/: main.rs
examples/create_nft/: Cargo.toml  hello.txt
examples/create_nft/src/: main.rs
examples/create_nft_dir/: Cargo.toml  nft.txt
examples/create_nft_dir/src/: main.rs
examples/delete_nft/: Cargo.toml
examples/delete_nft/src/: main.rs
examples/list_nft/: Cargo.toml
examples/list_nft/src/: main.rs
examples/upload_file/: Cargo.toml
examples/upload_file/src/: main.rs
examples/upload_file_dir/: Cargo.toml  ciao.txt  hello.txt
examples/upload_file_dir/src/: main.rs
src/: error.rs  lib.rs  types.rs
