[package]
name = "nft-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.47"
serde_json = "1.0.72"
reqwest = { version = "0.11.7", features = ["json", "multipart"] }
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }

[workspace]
members = ["examples/*"]
