[package]
name = "create_nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
serde_json = "1.0.72"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
nft-storage = { path = "../../" }
